Benchmark kotlinx.serialization and add cold-JVM measurements